--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.17.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
