--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "concurrently -k -n next,worker \"next dev\" \"npx tsx src/scripts/utility-link-worker.mjs\"",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
@@ -17,6 +17,7 @@
     "lucide-react": "^0.545.0",
     "next": "^15.5.9",
     "next-auth": "^4.24.11",
+    "playwright": "^1.57.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "sonner": "^2.0.7"
@@ -27,10 +28,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
