--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "worker": "prisma generate && npx tsx src/scripts/utility-link-worker.mjs",
-    "postinstall": "npx playwright install --with-deps chromium"
+    "worker": "prisma generate && npx tsx src/scripts/utility-link-worker.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
