--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "worker": "prisma generate && npx tsx --loader tsx src/scripts/utility-link-worker.mjs"
+    "worker": "prisma generate && node --import tsx src/scripts/utility-link-worker.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
