--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently -k -n next,worker \"next dev\" \"npx tsx src/scripts/utility-link-worker.mjs\"",
+    "dev": "next dev",
     "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "worker": "prisma generate && node --import tsx src/scripts/utility-link-worker.mjs"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.0",
     "framer-motion": "^12.23.24",
     "googleapis": "^164.1.0",
     "lucide-react": "^0.545.0",
@@ -20,8 +25,11 @@
     "next-auth": "^4.24.11",
     "playwright": "^1.57.0",
     "react": "^19.2.3",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.3",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
