--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.0",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.23.24",
     "googleapis": "^164.1.0",
     "lucide-react": "^0.545.0",
