Card payments, improved onboarding flow, scrapers for slo waste, att, bill status syncing

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "playwright": "^1.57.0",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^19.2.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
